bindings/python/build/lib.linux-x86_64-cpython-313/pypdfsuit/lib/libgopdfsuit.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/chinmay-sawant/gopdfsuit/v5/bindings/python/cgo */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 4 "exports.go"

#include <stdlib.h>
#include <string.h>

typedef struct {
    char* data;
    int length;
    char* error;
} ByteResult;

typedef struct {
    char** data;
    int* lengths;
    int count;
    char* error;
} ByteArrayResult;

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


// GeneratePDF generates a PDF from a JSON template.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult GeneratePDF(char* jsonTemplate);

// MergePDFs merges multiple PDF files into one.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult MergePDFs(char** pdfData, int* pdfLengths, int count);

// SplitPDF splits a PDF according to the given specification.
// The caller must free the result using FreeBytesArrayResult.
//
extern ByteArrayResult SplitPDF(char* pdfData, int pdfLength, char* specJSON);

// ParsePageSpec parses a page specification string.
// The caller must free the result using FreeIntArrayResult.
//
extern ByteResult ParsePageSpec(char* spec, int totalPages);

// FillPDFWithXFDF fills a PDF form with XFDF data.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult FillPDFWithXFDF(char* pdfData, int pdfLen, char* xfdfData, int xfdfLen);

// ConvertHTMLToPDF converts HTML to PDF.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult ConvertHTMLToPDF(char* requestJSON);

// ConvertHTMLToImage converts HTML to an image.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult ConvertHTMLToImage(char* requestJSON);

// GetAvailableFonts returns the list of available fonts as JSON.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult GetAvailableFonts();

// GetPageInfo returns metadata about PDF pages.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult GetPageInfo(char* pdfData, int pdfLen);

// ExtractTextPositions extracts text coordinates from a specific page.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult ExtractTextPositions(char* pdfData, int pdfLen, int pageNum);

// FindTextOccurrences searches for text and returns redaction candidate rectangles.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult FindTextOccurrences(char* pdfData, int pdfLen, char* searchText);

// ApplyRedactions applies redaction rectangles to the PDF.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult ApplyRedactions(char* pdfData, int pdfLen, char* redactionsJSON);

// ApplyRedactionsAdvanced applies a unified redaction request to the PDF.
// The caller must free the result using FreeBytesResult.
//
extern ByteResult ApplyRedactionsAdvanced(char* pdfData, int pdfLen, char* optionsJSON);

// FreeBytesResult frees memory allocated by functions returning ByteResult.
//
extern void FreeBytesResult(ByteResult result);

// FreeBytesArrayResult frees memory allocated by functions returning ByteArrayResult.
//
extern void FreeBytesArrayResult(ByteArrayResult result);

#ifdef __cplusplus
}
#endif